# polymarket-sweeper-bot

./: .gitignore  Cargo.toml  backtest_inverted_strategies.md  config.toml
bins/: backtest.rs  dry_run.rs
scripts/: download_l2_24h.sh
src/: config.rs  data_source.rs  error.rs  main.rs  parquet_loader.rs
src/client/: auth.rs  clob.rs  mod.rs
src/execution/: hot_path.rs  mod.rs  prebuild.rs
src/feed/: mod.rs
src/monitor/: alerts.rs  mod.rs  ntp.rs
src/risk/: controls.rs
src/strategy/: regime.rs
src/sweeper/: mod.rs
