[package]
name = "polymarket-sweeper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "=0.4.31", features = ["serde"] }
duckdb = { version = "=0.9.0", features = ["bundled"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "1.0"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
toml = "0.8"
rsntp = "4.1"
atomic_float = "0.1"
parking_lot = "0.12"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
alloy-primitives = "0.8"

[[bin]]
name = "dry_run"
path = "bins/dry_run.rs"
